   # initialized by constructors has been aligned to match how they are actually
   # initialized by the code generated by the compiler.  This change does not impact
   # the functionality of the codebase, it merely reduces the number of emitted
   # warnings (reorder warning) displayed by recent versions of gcc.
   #

   #
   # added an OE version number to "openeaagles/config.h"
   #

--------------------------------------------------------------------------------
basic

   Identifier class
      1) Modified to insure a single word (i.e., no spaces); any spaces are
      replaced with underscores.

   String class
      1) Changed the manipulator (set) functions to virtual

   # ---------------------------------------------------------------------------
   # Network handler modifications
   # ---------------------------------------------------------------------------
   # updated error messages in several of the network handlers.
   #
   # created a subdirectory called "nethandlers" that now contains:
   # TcpHandler, TcpClient, TcpServerMultiple, TcpServerSingle,
   # UdpBroadcastHandler, UdpMulticastHandler and UdpUnicastHandler.
   # (Note that UDP handlers have been renamed to better reflect transport
   # protocol)
   # 
   # all subclasses of TcpHandler are now stored in separate files, with filenames
   #  matching classnames.
   #
   # NetHandler was derived from Object, it is now derived from Component to enable
   # the selection of information and error messages via input file.
   #
   # the scope resolution operator "::" was added to all system calls related to
   # network operations.  Functions appended with operator include ioctl,
   # ioctlsocket, setsockopt, gethostname, socket, listen, accept, perror,
   # bind, closesocket, recvform, connect, sendto, inet_addr,
   # and inet_ntoa

--------------------------------------------------------------------------------
basicGL

   Translator class