@@ -8,10 +8,11 @@ CPPFLAGS += -I$(JSBSIM_INC_DIR)
 SUBDIRS = 
 
 OBJS =  \
-	$(LIB)(vehiclesFF.o) \
+	$(LIB)(Factory.o) \
 	$(LIB)(JSBSimModel.o) \
 	$(LIB)(LaeroModel.o)  \
-	$(LIB)(RacModel.o)
+	$(LIB)(RacModel.o) \
+	$(LIB)(vehiclesFF.o)
 
 all: ${OBJS}
 
